# TestTask

./: README.md  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_employee_team.py  0003_alter_employee_team.py
teams/: settings.py  urls.py
